err/webmocker.err
Listing '.'...
Listing './bin'...
Compiling './bin/bottle.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/bottle-0.12.13.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pretend_extended'...
Listing './lib/python3.5/site-packages/pretend_extended/client'...
Listing './lib/python3.5/site-packages/pretend_extended/common'...
Listing './lib/python3.5/site-packages/pretend_extended/common/compat'...
Compiling './lib/python3.5/site-packages/pretend_extended/common/compat/dictconfig.py'...
***   File "./lib/python3.5/site-packages/pretend_extended/common/compat/dictconfig.py", line 308
    except StandardError, e:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pretend_extended/common/tests'...
Listing './lib/python3.5/site-packages/pretend_extended/server'...
Listing './lib/python3.5/site-packages/pretend_extended/server/apps'...
Listing './lib/python3.5/site-packages/pretend_extended/server/mock_servers'...
Listing './lib/python3.5/site-packages/pretend_extended/server/mock_servers/http'...
Listing './lib/python3.5/site-packages/pretend_extended/server/mock_servers/smtp'...
Listing './lib/python3.5/site-packages/pretend_extended/server/mock_servers/ssh'...
Listing './lib/python3.5/site-packages/pretend_extended-2.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/integration'...
Listing './lib/python3.5/site-packages/webmocker'...
Listing './lib/python3.5/site-packages/webmocker/mock_helper'...
Compiling './lib/python3.5/site-packages/webmocker/server.py'...
***   File "./lib/python3.5/site-packages/webmocker/server.py", line 10
    print 'Usage : python -m webmocker.server <folderpath> <portNumber>'
                                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/webmocker-0.6.4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
